DFfullcopybackup/force-app/main/default/objects/Order/fields/Complete_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Complete_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Delivery</label>
    <type>Checkbox</type>
</CustomField>