DFfullcopybackup/force-app/main/default/objects/Order/fields/Consignee_PO_Num__c.field-meta.xml
<CustomField>
    <fullName>Consignee_PO_Num__c</fullName>
    <label>Consignee PO#</label>
    <length>30</length>
    <type>Text</type>
</CustomField>