DFfullcopybackup/force-app/main/default/objects/Order/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>ShipToContact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>