DFfullcopybackup/force-app/main/default/objects/Order/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PrePaid and Add</fullName>
            </value>
            <value>
                <fullName>Freight Allowed</fullName>
            </value>
            <value>
                <fullName>WILL CALL</fullName>
            </value>
            <value>
                <fullName>CUST ACCT #</fullName>
            </value>
            <value>
                <fullName>Collect on Delivery</fullName>
            </value>
            <value>
                <fullName>3rd Party Bill</fullName>
            </value>
            <value>
                <fullName>Collect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>