DFfullcopybackup/force-app/main/default/objects/Order/fields/Inquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Number__c</fullName>
    <label>Inquiry#</label>
    <length>15</length>
    <type>Text</type>
</CustomField>