DFfullcopybackup/force-app/main/default/objects/Order/fields/MTR_Number__c.field-meta.xml
<CustomField>
    <fullName>MTR_Number__c</fullName>
    <label>MTR Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>