DFfullcopybackup/force-app/main/default/objects/Order/fields/Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notes__c</fullName>
    <label>Pricing Notes</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>