DFfullcopybackup/force-app/main/default/objects/Order/fields/Quote_Proposal_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Proposal_Name__c</fullName>
    <label>Quote/Proposal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>