DFfullcopybackup/force-app/main/default/objects/Order/fields/Sap_api_message__c.field-meta.xml
<CustomField>
    <fullName>Sap_api_message__c</fullName>
    <label>Sap api message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>