DFfullcopybackup/force-app/main/default/objects/Order/fields/Ship_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account_Number__c</fullName>
    <formula>ShipToAccountId__r.AccountNumber</formula>
    <label>Ship-To Account Number</label>
    <type>Text</type>
</CustomField>