DFfullcopybackup/force-app/main/default/objects/Order/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <label>Ship-To Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>