DFfullcopybackup/force-app/main/default/objects/Order/fields/Sold_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account_Number__c</fullName>
    <formula>SoldToAccountId__r.AccountNumber</formula>
    <label>Sold-To Account Number</label>
    <type>Text</type>
</CustomField>