DFfullcopybackup/force-app/main/default/objects/Order/fields/SoldToAccountId__c.field-meta.xml
<CustomField>
    <fullName>SoldToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Sold To)</relationshipLabel>
    <relationshipName>OrdersSoldTo</relationshipName>
    <type>Lookup</type>
</CustomField>