DFfullcopybackup/force-app/main/default/objects/Order/fields/ST_Credit_Hold_Message__c.field-meta.xml
<CustomField>
    <fullName>ST_Credit_Hold_Message__c</fullName>
    <label>Credit Hold Message</label>
    <type>TextArea</type>
</CustomField>