DFfullcopybackup/force-app/main/default/objects/Order/fields/ST_Credit_Hold_Override__c.field-meta.xml
<CustomField>
    <fullName>ST_Credit_Hold_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Hold Override</label>
    <type>Checkbox</type>
</CustomField>