DFfullcopybackup/force-app/main/default/objects/Order/fields/ST_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ST_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>