DFfullcopybackup/force-app/main/default/objects/Order/fields/ST_Purchase_Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>ST_Purchase_Requisition_Number__c</fullName>
    <label>Purchase Requisition Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>