DFfullcopybackup/force-app/main/default/objects/Order/fields/ST_SAP_SO_Number__c.field-meta.xml
<CustomField>
    <fullName>ST_SAP_SO_Number__c</fullName>
    <label>SAP SO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>