DFfullcopybackup/force-app/main/default/objects/Order/fields/Total_Ext_Profit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Ext_Profit_Percent__c</fullName>
    <formula>Total_Extended_Profit__c / TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Ext Profit%</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>