DFfullcopybackup/force-app/main/default/objects/Order/fields/Total_Ext_Profit_Percent_O__c.field-meta.xml
<CustomField>
    <fullName>Total_Ext_Profit_Percent_O__c</fullName>
    <label>Total Ext Profit% O</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>