DFfullcopybackup/force-app/main/default/objects/Order/fields/Total_Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Extended_Cost__c</fullName>
    <label>Total Extended Cost</label>
    <summarizedField>OrderItem.Extended_Cost__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>