DFfullcopybackup/force-app/main/default/objects/Order/fields/Total_Extended_Profit_O__c.field-meta.xml
<CustomField>
    <fullName>Total_Extended_Profit_O__c</fullName>
    <label>Total Extended Profit O</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>