DFfullcopybackup/force-app/main/default/objects/Order/fields/Total_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Price__c</fullName>
    <label>Total Net Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>