DFfullcopybackup/force-app/main/default/objects/Order/fields/Total_Weight_lb__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lb__c</fullName>
    <label>Total Weight (lb)</label>
    <summarizedField>OrderItem.Total_Weight_lb__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>