DFfullcopybackup/force-app/main/default/objects/Order/fields/Total_Weight_lb_O__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lb_O__c</fullName>
    <label>Total Weight (lb)O</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>