DFfullcopybackup/force-app/main/default/objects/Order/fields/WHSE_Instructions__c.field-meta.xml
<CustomField>
    <fullName>WHSE_Instructions__c</fullName>
    <label>WHSE Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>