DFfullcopybackup/force-app/main/default/objects/Order/validationRules/SAP_order_fields_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_order_fields_validation</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    ISBLANK(TEXT(Sales_Order_Type__c)),
    ISBLANK(TEXT(Freight_Terms__c)),
    ISBLANK(PoNumber)
)</errorConditionFormula>
    <errorMessage>Sales Order Type, Freight Terms, and PO Number must be filled in.</errorMessage>
</ValidationRule>